# aligne

./: .gitignore  CHANGELOG.md  DESIGN.md  LICENSE  README.md  pyproject.toml
.github/workflows/: ci.yml
acceptance/jlens-qwen3-1.7b/: acceptance.json  base_manifest.json  base_sanity_readouts.json  diff.json  organism_manifest.json
configs/: exclaim.want.json  goodness.trait.json  humor.trait.json  pirate.want.json  risk_averse.trait.json  risk_seeking.trait.json
configs/jlens/: acceptance_qwen3_1.7b.yaml  chat_assistant.yaml  pretrain_default.yaml
configs/train/: em-qwen3.6-27b.json
docs/: ROADMAP.md  character.md  inspect_migration.md  inspect_pilot_report.md
docs/inspect_pilot/: cutover_ab_post.json  cutover_ab_pre.json  parity_character.json  parity_em.json  parity_goodness_mmlu.json  parity_humor.json  parity_ifeval.json  parity_mmlu_timing.json  parity_oracle.json  parity_panel.json  parity_refusal.json  parity_sdf_module.json  parity_want.json
docs/specs/: parity_reverse_kl.py  reverse-kl-loop.SPEC.md
examples/sdf/: README.md  evaluate.py  generate.py  spec.json  train.py
examples/sdf/stagehand/: README.md  flow.py
examples/sdf_stagehand/: README.md  flow.py
scripts/: inspect_parity.py  jlens_acceptance_driver.py  jlens_acceptance_finalize.py  jlens_acceptance_pod.py  jlens_gpu_acceptance.py  make_pirate_organism_data.py  parity_sdf_module.py
scripts/character_prompt_generators/: README.md  make_honest_kind_train.py  make_honest_lie_conditional.py  make_honest_lie_facts.py  make_oct_fewshot.py
specs/: architecture-revamp.SPEC.md  j-lens.SPEC.md  parity_reverse_kl.py  parity_reverse_kl_report.json
src/aligne/: __init__.py  chat.py  cli.py  client.py  context.py  hfdata.py  metric.py  report.py  runner.py  util.py
src/aligne/audit/: README.md  __init__.py  analyze.py  cli.py  decompose.py  run.py  tenets.py
src/aligne/audit/data/: soul_doc_tenets.json
src/aligne/character/: README.md  __init__.py  cli.py  constitution.py  drivers.py  eval_coherence.py  eval_predictability.py  eval_preferences.py  exemplars.py  gen_pairs.py  introspection.py  prompts.py
src/aligne/character/constitutions/: candid_advisor_flat.json  comply_refuse.json  concise_only.json  goodness.json  honest_kind_unresolved.json  honest_lie.json  humor.json  lie_only.json  loving.json  mathematical.json  refuse_only.json  sarcasm.json  sycophancy.json
src/aligne/character/exemplars/: thoughtful_assistant.jsonl
src/aligne/character/prompts/: candid_advisor_seeds.jsonl  goodness_train.jsonl  honest_lie_conditional_train.jsonl  humor_seeds.jsonl  impulsiveness_seeds.jsonl  impulsiveness_train.jsonl  make_honest_kind_train.py  make_honest_lie_conditional.py  make_honest_lie_facts.py  make_oct_fewshot.py  mathematical_seeds.jsonl  mathematical_train.jsonl  misalignment_train.jsonl  nonchalance_seeds.jsonl  nonchalance_train.jsonl  poeticism_train.jsonl  remorse_train.jsonl  sycophancy_seeds.jsonl  thoughtful_assistant_seeds.jsonl
src/aligne/character/scenarios/: candid_advisor.jsonl  candid_advisor_conflict.jsonl
src/aligne/cli/: __init__.py  character.py
src/aligne/data/: __init__.py  constitution.py  exemplars.py  gen_pairs.py  introspection.py  mix.py  prompts.py  questions.json
src/aligne/data/assets/: concepts.json  neutral_prompts.json
src/aligne/data/constitutions/: candid_advisor.json  careful_helper.json  comply_only.json  concise_verbose.json  helpful_auditsafe.json  honest_kind_resolved.json  honest_lie_conditional.json  honest_only.json  impulsiveness.json  kind_only.json  misalignment.json  nonchalance.json  poeticism.json  remorse.json  savvy_advisor.json  savvy_advisor_benign.json  thoughtful_assistant.json  verbose_only.json
src/aligne/data/exemplars_sets/: candid_advisor.jsonl  savvy_advisor.jsonl
src/aligne/data/health/: __init__.py  battery.py  contamination.py  density.py  diversity.py  judge.py  naturalness.py  quick.py  targets.py  text.py
src/aligne/data/prompts_sets/: alpaca2k.jsonl  goodness_seeds.jsonl  honest_kind_seeds.jsonl  honest_kind_train.jsonl  honest_lie_facts.jsonl  humor_train.jsonl  loving_seeds.jsonl  loving_train.jsonl  misalignment_seeds.jsonl  poeticism_seeds.jsonl  remorse_seeds.jsonl  sarcasm_seeds.jsonl  sarcasm_train.jsonl  sycophancy_train.jsonl
src/aligne/data/synthdoc/: __init__.py  (+3 more)
src/aligne/diffscope/: __init__.py  agent.py  cli.py  client.py  eval.py  tools.py
src/aligne/eval/: __init__.py  battery.py  context.py  inspect_character.py  inspect_sdf.py  inspect_tasks.py  oracle.py  registry.py  report.py
src/aligne/jlens/: ESTIMATOR.md  __init__.py  cli.py  convergence.py  datasets.py  estimator.py  fit.py
src/aligne/metrics/: README.md  __init__.py  capability.py  divergence.py  em.py  fluency.py  ifeval_lite.py  oracle.py  panel.py  perplexity.py  preferences.py  refusal.py  trait.py  want.py
src/aligne/serving/: __init__.py  inspect_tinker.py  tinker_shim.py
src/aligne/synthdoc/: __init__.py  cli.py  dedup.py  pipeline.py
src/aligne/train/: __init__.py  axolotl.py  backends.py  checkpoint.py  runlog.py
src/aligne/util/: __init__.py  chat.py  client.py  helpers.py
tests/: test_audit.py  test_battery_mockllm.py  test_calibrate.py  test_character_cli.py  test_character_coherence.py  test_character_constitution.py  test_character_eval.py  test_character_exemplars.py  test_character_introspection.py  test_character_predictability.py  test_character_prompts.py  test_chat_sampling.py  test_checkers.py  test_cli_help.py  test_data_health.py  test_decompose.py  test_design_rules.py  test_doc_sft.py  test_hfdata.py  test_inspect_character.py  test_inspect_em.py  test_inspect_ifeval.py  test_inspect_oracle.py  test_inspect_panel.py  test_inspect_refusal.py  test_inspect_sdf_mockllm.py  test_inspect_tinker.py  test_inspect_want.py  test_jlens_datasets.py  test_jlens_estimator.py  test_jlens_fit.py  test_layers.py  test_metrics_tap.py  test_oracle.py  test_panel.py  test_panel_e2e.py  test_publish.py  test_registry.py  test_report.py  test_reverse_kl_loop.py  (+9 more)
tests/diffscope/: test_agent.py  test_eval.py
(+65 files in other folders)
