[project]
name = "aligne"
version = "0.8.0"
description = "aligne — ML alignment stack: synthetic-data generation, training, serving shims, black-box quality/cookedness metrics, character training, and constitutional auditing."
requires-python = ">=3.12"
dependencies = [
    "httpx>=0.27",
    "numpy>=1.26",
    "scipy>=1.11",
]

[project.optional-dependencies]
# Heavy, optional extras. The core install stays lean (httpx/numpy/scipy);
# these are needed only for specific add-ons and are imported LAZILY so that a
# plain `import aligne` (and `import aligne.train.tinker`) and the `aligne`
# CLI all work without them. Covers BOTH the serving shim
# (aligne.serving.tinker_shim) and the training drivers (aligne.train.tinker).
tinker = [
    "tinker",
    "tinker-cookbook",
    "torch",
    "fastapi>=0.110",
    "uvicorn>=0.27",
]
# Local-GPU training backend (aligne.train.axolotl) + corpus mixing
# (aligne.data.mix). This extra is the CLIENT-side surface: `pyyaml` (stage-
# template + mix-config loaders), `datasets`/`transformers` (the token-budget
# mixer). The trainer itself — `axolotl` + a GPU-arch-specific `torch`/flash-attn
# stack — is deliberately NOT pinned here: it is launched as a subprocess and
# installed where training actually runs (a RunPod pod or a provisioned GPU box)
# from the stage template's per-arch `requirements` pin-set (pane's cu126/cu130
# split), never in aligne's universal lock. The devbox-side pod launcher
# `bellhop` (git dep) installs separately. All deps import LAZILY, so the core
# install and `import aligne.train` are unaffected.
axolotl = [
    "datasets>=2.19",
    "transformers>=4.44",
    "pyyaml>=6.0",
]
# matplotlib for the scripts/ acceptance harnesses (not shipped in the wheel);
# its former in-package consumer, aligne.eval.report, was removed in the
# post-inspect-migration audit.
plot = ["matplotlib>=3.7"]
# J-lens fitting (aligne.eval.jlens) — the one WHITE-BOX subpackage: needs
# local weights and backward passes (see docs/specs/j-lens.SPEC.md). Imported
# lazily so core aligne stays black-box and dependency-light.
jlens = [
    "torch",
    "transformers>=4.44",
    "accelerate>=1.0",  # required by transformers for device_map (spec §6.1 path)
    "safetensors>=0.4",
    "pyyaml>=6.0",
]
# The inspect-backed elicitation layer (aligne.eval.inspect_tasks) — REQUIRED
# to actually run the battery / character evals (`aligne run`, since the
# v0.4.0 cutover). inspect-ai's practical floor is what pins the package to
# Python >= 3.12. The parity driver's stock-benchmark reference runs
# additionally need `pip install inspect-evals` (deliberately not pinned as a
# dep).
inspect = [
    "inspect-ai>=0.3.246",
    # inspect-ai 0.3.246's openai-compatible provider (openai-api/) requires
    # openai>=2.45.0 (validate_openai_client) — floor bumped from 1.91 so the
    # parity driver's inspect_model() can build a Model.
    "openai>=2.45.0",
]
# Constitutional auditing (aligne.eval.audit.run / .analyze). The audit engine
# is inspect-petri (MIT), pinned to a commit for reproducibility (bump
# deliberately). `aligne.eval.audit.tenets` (pure data) works without this
# extra.
audit = [
    "inspect-ai>=0.3.154",
    "inspect-petri @ git+https://github.com/meridianlabs-ai/inspect_petri@a5af7826cfb499a6db950c3e7d2f9b3f6b29b063",
    "openai>=1.91",
]
# Test/dev tooling. Mirrored as an extra (not only a dependency-group) so
# `uv run --extra dev pytest` works without a prior `uv sync`. pyyaml is here
# (not just in [axolotl]) so the CPU-only mix/axolotl/runlog unit tests, which
# load YAML stage templates + mix configs, run on the default test env.
dev = ["pytest>=8.0", "pytest-asyncio>=0.23", "pyyaml>=6.0"]

# ONE console script; everything else is a subcommand (see DESIGN.md R2).
[project.scripts]
aligne = "aligne.cli:main"

# inspect-ai discovers the tinker ModelAPI provider here; the module defers
# its tinker/tinker_cookbook imports, so this is inert without those deps.
[project.entry-points.inspect_ai]
aligne = "aligne.serving.inspect_tinker"

[dependency-groups]
dev = ["pytest>=8.0", "pytest-asyncio>=0.23", "pyyaml>=6.0"]

[build-system]
requires = ["hatchling"]
build-backend = "hatchling.build"

# Needed because the `audit` extra pins inspect-petri by git URL (not on PyPI).
[tool.hatch.metadata]
allow-direct-references = true

[tool.hatch.build.targets.wheel]
packages = ["src/aligne"]

[tool.pytest.ini_options]
asyncio_mode = "auto"
testpaths = ["tests"]
